--- a/app/src/main/res/layout/widget_quzu.xml
+++ b/app/src/main/res/layout/widget_quzu.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:orientation="horizontal"
         android:paddingLeft="12dp"
         android:paddingRight="12dp">
@@ -28,18 +28,31 @@
             android:id="@+id/tv_refresh"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:clickable="true"
             android:gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:text="刷新"
             android:textColor="@color/black" />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#dedede" />
 
     <ImageView
-        android:id="@+id/iv_good"
+        android:id="@+id/iv_top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerInside"
+        android:src="@drawable/top" />
+
+    <ImageView
+        android:id="@+id/iv_ad"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"
-        android:src="@drawable/start_page" />
-
+        android:scaleType="fitXY"
+        android:src="@drawable/ad1" />
 
 </LinearLayout>
