--- a/app/src/main/res/xml/provider_quzu_widget.xml
+++ b/app/src/main/res/xml/provider_quzu_widget.xml
@@ -4,6 +4,8 @@
     android:minHeight="250dp"
     android:minWidth="250dp"
     android:resizeMode="horizontal"
+    android:previewImage="@drawable/top"
+    android:widgetCategory="home_screen"
     android:updatePeriodMillis="1800000">
 
 </appwidget-provider>
