完成锁屏后台播放广告功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:padding="10dp"
-        android:text="开启锁屏广告(未实现)" />
+        android:text="开启锁屏广告" />
 
 </LinearLayout>
