--- a/app/src/main/res/xml/provider_quzu_widget.xml
+++ b/app/src/main/res/xml/provider_quzu_widget.xml
@@ -4,7 +4,7 @@
     android:minHeight="250dp"
     android:minWidth="250dp"
     android:resizeMode="horizontal"
-    android:previewImage="@drawable/top"
+    android:previewImage="@drawable/ad1"
     android:widgetCategory="home_screen"
     android:updatePeriodMillis="1800000">
 
