--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.quzubuluo.quzulock.view.UnlockView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rv_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/start_page"
-    tools:context="test.quzubuluo.com.app.lock.LockActivity">
+    tools:context="com.quzubuluo.quzulock.lock.LockActivity">
 
     <TextView
-        android:id="@+id/tv_unlock"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:id="@+id/tv_unlock_tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="120dp"
-        android:background="#11ff22"
-        android:gravity="center"
-        android:text="解锁"
-        android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:text="上滑解锁" />
 
-    <TextView
-        android:id="@+id/tv_more_ad"
+    <ImageView
+        android:id="@+id/iv_unlock"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="400dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        android:background="#bb33dd"
-        android:gravity="center"
-        android:text="看广告"
-        android:textColor="#ffff"
-        android:textSize="16sp" />
-</RelativeLayout>
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="30dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/arrow_down" />
+
+</com.quzubuluo.quzulock.view.UnlockView>
